# Advent-of-Haskell

./: .gitignore  LICENSE  README.md  advent.cabal  aoc.cabal  aoc2020.cabal  cabal.project  doctests.hs
Common/: AdventAPI.hs  Math.hs  Utils.hs
common/: AdventAPI.hs  Utils.hs  Visualize.hs  advent.cabal
common/Advent/: API.hs  Graph.hs  Life.hs  Math.hs  Megaparsec.hs  Utils.hs
common/Advent/Coord/: Grid.hs  Grid3.hs
day01/: day01  day01.hs
day02/: day02.hs
src/: day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs  template.hs
src/2015/: aoc2015.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs
src/2016/: aoc2016.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs
src/2020/: aoc2020.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs
src/2021/: aoc2021.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs
src/2022/: aoc2022.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs
src/2023/: aoc2023.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs
src/2024/: aoc2024.cabal  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day21.hs  day22.hs  day23.hs  day24.hs  day25.hs
src/Advent/: advent.cabal
src/Advent/Advent/: IO.hs
src/Advent/Advent/Data/: Trifunctor.hs
src/Advent/Advent/Math/: LinearEquations.hs
