name:                advent
version:             0.1.0.0
synopsis:            Advent of Code Solutions
description:         Solutions to Advent of Code, check it out at
                     <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              João Nuno Oliveira
maintainer:          joaonunoao@gmail.com
copyright:           2020 João Nuno Oliveira
homepage:            https://github.com/jnoliv/AOC20
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      Common

  exposed-modules:
    AdventAPI
    Math
    Utils
  
  build-depends:
    base,
    req,
    directory,
    filepath,
    text,
    bytestring,
    containers,
    megaparsec

executable day01
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day01.hs
  
  build-depends:       base, advent

executable day02
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day02.hs
  
  build-depends:       base, advent, megaparsec

executable day03
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day03.hs
  
  build-depends:       base, advent, containers

executable day04
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day04.hs
  
  build-depends:       base, advent, split

executable day05
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day05.hs
  
  build-depends:       base, advent

executable day06
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day06.hs
  
  build-depends:       base, advent, split, containers

executable day07
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day07.hs
  
  build-depends:       base, advent, split, containers

executable day08
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day08.hs
  
  build-depends:       base, advent, containers, vector

executable day09
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day09.hs
  
  build-depends:       base, advent, vector

executable day10
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day10.hs
  
  build-depends:       base, advent, split

executable day11
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day11.hs
  
  build-depends:       base, advent, containers

executable day12
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day12.hs
  
  build-depends:       base, advent

executable day13
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day13.hs
  
  build-depends:       base, advent, split

executable day14
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day14.hs
  
  build-depends:       base, advent, containers, megaparsec

executable day15
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day15.hs
  
  build-depends:       base, advent, containers, split

executable day16
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day16.hs
  
  build-depends:       base, advent, megaparsec

executable day17
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day17.hs
  
  build-depends:       base, advent, containers

executable day18
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day18.hs
  
  build-depends:       base, advent, megaparsec

executable day19
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             day19.hs
  
  build-depends:       base, advent, containers, megaparsec, mtl
