cabal-version:       2.4
build-type:          Simple

name:                aoc2020
version:             0.1.0.0
synopsis:            Advent of Code 2020 Solutions
description:         Haskell solutions to Advent of Code 2020, check it out at
                     <https://adventofcode.com>

license:             ISC
license-file:        LICENSE
author:              João Nuno Oliveira
maintainer:          joaonunoao@gmail.com
copyright:           2020 João Nuno Oliveira
homepage:            https://github.com/jnoliv/AOC20
extra-source-files:  README.md

common day
  default-language:  Haskell2010
  hs-source-dirs:    src/2020

  build-depends:     base, advent

executable day01
  import:            day
  main-is:           day01.hs

executable day02
  import:            day
  main-is:           day02.hs
  build-depends:     megaparsec

executable day03
  import:            day
  main-is:           day03.hs
  build-depends:     containers

executable day04
  import:            day
  main-is:           day04.hs
  build-depends:     split

executable day05
  import:            day
  main-is:           day05.hs

executable day06
  import:            day
  main-is:           day06.hs
  build-depends:     split, containers

executable day07
  import:            day
  main-is:           day07.hs
  build-depends:     split, containers

executable day08
  import:            day
  main-is:           day08.hs
  build-depends:     containers, vector

executable day09
  import:            day
  main-is:           day09.hs
  build-depends:     vector

executable day10
  import:            day
  main-is:           day10.hs
  build-depends:     split

executable day11
  import:            day
  main-is:           day11.hs
  build-depends:     containers

executable day12
  import:            day
  main-is:           day12.hs

executable day13
  import:            day
  main-is:           day13.hs
  build-depends:     split

executable day14
  import:            day
  main-is:           day14.hs
  build-depends:     containers, megaparsec

executable day15
  import:            day
  main-is:           day15.hs
  build-depends:     containers, split

executable day16
  import:            day
  main-is:           day16.hs
  build-depends:     megaparsec

executable day17
  import:            day
  main-is:           day17.hs
  build-depends:     containers

executable day18
  import:            day
  main-is:           day18.hs
  build-depends:     megaparsec

executable day19
  import:            day
  main-is:           day19.hs
  build-depends:     containers, megaparsec, mtl

executable day20
  import:            day
  main-is:           day20.hs
  build-depends:     split, containers

executable day21
  import:            day
  main-is:           day21.hs
  build-depends:     containers, megaparsec

executable day22
  import:            day
  main-is:           day22.hs
  build-depends:     containers, megaparsec

executable day23
  import:            day
  main-is:           day23.hs
  build-depends:     vector

executable day24
  import:            day
  main-is:           day24.hs
  build-depends:     containers, megaparsec

executable day25
  import:            day
  main-is:           day25.hs
