name:                advent
version:             0.1.0.0
synopsis:            Utilities library for Advent of Code solutions
license:             ISC
author:              João Nuno Oliveira
maintainer:          joaonunoao@gmail.com
copyright:           2020 João Nuno Oliveira
homepage:            https://github.com/jnoliv/Advent-of-Haskell
build-type:          Simple
cabal-version:       >=1.2

library
  default-language:    Haskell2010

  exposed-modules:
    Advent.API
    Advent.Coord.Grid
    Advent.Coord.Grid3
    Advent.Life
    Advent.Math
    Advent.Megaparsec
    Advent.Utils
  
  build-depends:
    base,
    req,
    directory,
    filepath,
    text,
    bytestring,
    containers,
    megaparsec,
    cryptohash-md5
