cabal-version:       3.0
build-type:          Simple

name:                aoc2015
version:             0.1.0.0
synopsis:            Advent of Code 2015 Solutions
description:         Haskell solutions to Advent of Code 2015, check it out at
                     <https://adventofcode.com>

license:             ISC
license-file:        LICENSE
author:              João Nuno Oliveira
maintainer:          joaonunoao@gmail.com
copyright:           2020 João Nuno Oliveira
homepage:            https://github.com/jnoliv/AOC20

common day
  default-language:  Haskell2010
  build-depends:     base, advent

executable day01
  import:            day
  main-is:           day01.hs

executable day02
  import:            day
  main-is:           day02.hs

executable day03
  import:            day
  main-is:           day03.hs
  build-depends:     containers

executable day04
  import:            day
  main-is:           day04.hs
  build-depends:     bytestring, cryptohash-md5

executable day05
  import:            day
  main-is:           day05.hs
  build-depends:     text

executable day06
  import:            day
  main-is:           day06.hs
  build-depends:     vector

executable day07
  import:            day
  main-is:           day07.hs
  build-depends:     containers

executable day08
  import:            day
  main-is:           day08.hs

executable day09
  import:            day
  main-is:           day09.hs
  build-depends:     containers

executable day10
  import:            day
  main-is:           day10.hs

executable day11
  import:            day
  main-is:           day11.hs

executable day12
  import:            day
  main-is:           day12.hs

executable day13
  import:            day
  main-is:           day13.hs
  build-depends:     containers

executable day14
  import:            day
  main-is:           day14.hs
  build-depends:     containers

executable day15
  import:            day
  main-is:           day15.hs

executable day16
  import:            day
  main-is:           day16.hs

executable day17
  import:            day
  main-is:           day17.hs

executable day18
  import:            day
  main-is:           day18.hs
  build-depends:     containers

executable day19
  import:            day
  main-is:           day19.hs
  build-depends:     containers

executable day20
  import:            day
  main-is:           day20.hs

executable day21
  import:            day
  main-is:           day21.hs
