cabal-version:       3.0
build-type:          Simple

name:                aoc2016
version:             0.1.0.0
synopsis:            Advent of Code 2016 Solutions
description:         Haskell solutions to Advent of Code 2016, check it out at
                     <https://adventofcode.com>

license:             ISC
license-file:        LICENSE
author:              João Nuno Oliveira
maintainer:          joaonunoao@gmail.com
copyright:           2020 João Nuno Oliveira
homepage:            https://github.com/jnoliv/AOC20

common day
  default-language:  Haskell2010
  build-depends:     base, advent

executable day01
  import:            day
  main-is:           day01.hs
  build-depends:     containers

executable day02
  import:            day
  main-is:           day02.hs
  build-depends:     containers

executable day03
  import:            day
  main-is:           day03.hs
  build-depends:     split

executable day04
  import:            day
  main-is:           day04.hs
  build-depends:     containers
