cabal-version:       3.0
build-type:          Simple

name:                aoc2021
version:             0.1.0.0
synopsis:            Advent of Code 2021 Solutions
description:         Haskell solutions to Advent of Code 2021, check it out at
                     <https://adventofcode.com>

license:             ISC
license-file:        LICENSE
author:              João Nuno Oliveira
maintainer:          joaonunoao@gmail.com
copyright:           2021 João Nuno Oliveira
homepage:            https://github.com/jnoliv/Advent-of-Haskell

common day
  default-language:  Haskell2010
  build-depends:     base, advent

executable day01
  import:            day
  main-is:           day01.hs

executable day02
  import:            day
  main-is:           day02.hs

executable day03
  import:            day
  main-is:           day03.hs

executable day04
  import:            day
  main-is:           day04.hs

executable day05
  import:            day
  main-is:           day05.hs
  build-depends:     containers
