cabal-version:       3.0
build-type:          Simple

name:                aoc2022
version:             0.1.0.0
synopsis:            Advent of Code 2022 Solutions
description:         Haskell solutions to Advent of Code 2022, check it out at
                     <https://adventofcode.com>

license:             ISC
license-file:        LICENSE
author:              João Nuno Oliveira
maintainer:          joaonunoao@gmail.com
copyright:           2022 João Nuno Oliveira
homepage:            https://github.com/jnoliv/Advent-of-Haskell

common day
  default-language:  Haskell2010
  build-depends:     base, advent

executable day01
  import:            day
  main-is:           day01.hs

executable day02
  import:            day
  main-is:           day02.hs

executable day03
  import:            day
  main-is:           day03.hs
  build-depends:     split

executable day04
  import:            day
  main-is:           day04.hs

executable day05
  import:            day
  main-is:           day05.hs

executable day06
  import:            day
  main-is:           day06.hs

executable day07
  import:            day
  main-is:           day07.hs
  build-depends:     containers

executable day08
  import:            day
  main-is:           day08.hs
  build-depends:     containers

executable day09
  import:            day
  main-is:           day09.hs
  build-depends:     containers

executable day10
  import:            day
  main-is:           day10.hs
  build-depends:     split
